@@ -91,6 +91,7 @@
     "search_error_retry": "Click here to retry",
     "contribute": "Contribute (GitHub)",
     "reviews": "Reviews",
+    "read_reviews": "Read Reviews",
     "size": "Size",
     "package_info": "Package info",
     "badge_completion_avg": "Avg cost of completion",
@@ -313,6 +314,7 @@
         "showcomparelinks": "Show \"Compare\" links for achievements on friend activity feed",
         "hidetmsymbols": "Trademark and Copyright symbols in game titles",
         "metacritic": "Show Metacritic user scores",
+        "opencritic": "Show Opencritic.com information",
         "hideactivelistings": "Hide all active listings on Market homepage by default",
         "clear": "Are you sure you wish to reset all options? This cannot be undone.",
         "profile_api_info": "Show user API link on profiles",
