@@ -33,6 +33,7 @@
         "img/steamdb_store.png",
         "img/steamdb_store_black.png",
         "img/pcgw.png",
+        "img/opencritic.png",
         "img/trading.png",
         "img/gl_banner.jpg",
         "img/enhancedsteam.png",
