@@ -221,6 +221,7 @@
 				<li class="header" id="store_general_thirdparty">Options for information from 3rd party sites</li>
 				<li><input type="checkbox" id="show_keylol_links" data-setting="show_keylol_links"><label for="show_keylol_links" id="store_keylol_text">Show Keylol links on app pages</label></li>
 				<li><input type="checkbox" id="showmcus" data-setting="showmcus"><label for="showmcus" id="store_metacritic_text" data-locale-text="options.metacritic">Show Metacritic user scores</label></li>
+				<li><input type="checkbox" id="showoc" data-setting="showoc"><label for="showoc" id="store_opencritic_text" data-locale-text="options.opencritic">Show Opencritic.com information</label></li>
 				<li><input type="checkbox" id="showhltb" data-setting="showhltb"><label for="showhltb" id="store_hltb_text" data-locale-text="options.hltb">Show HowLongToBeat.com information</label></li>
 				<li><input type="checkbox" id="showsteamdb" data-setting="showsteamdb"><label for="showsteamdb" id="store_steamdb_text" data-locale-text="options.steamdb">Show SteamDB links</label></li>
 				<li><input type="checkbox" id="showastatslink" data-setting="showastatslink"><label for="showastatslink" id="store_astatslink_text" data-locale-text="options.show_astatslink">Show AStats link on app pages</label></li>
